--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "kevin@icontact.nl"
         }
     ],
-    "require": {},
+    "require": {
+      "ext-json": "*"
+    },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
         "wp-coding-standards/wpcs": "*",
