Ook een soort crashlytics

--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,10 @@
         "phpcbf": [
             "phpcbf -p"
         ]
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
