--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
-        "wp-coding-standards/wpcs": "*",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1"
+        "wp-coding-standards/wpcs": "^3.0",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
+        "phpcompatibility/phpcompatibility-wp": "*"
     },
     "scripts": {
         "phpcs": [
